--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,7 +35,7 @@ body {
 	letter-spacing: 5px;
 }
 .section-info {
-	background-image: url(/img/salon.jpg);
+	background-image: url(img/salon.jpg);
 	background-size: cover;
 	padding-top: 70px;
 }
