pre-background changed from purple to white

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   height: 100vh;
   font-family: "Ubuntu", sans-serif;
   color: #fff;
-  background-color: blueviolet;
+  background-color: rgb(255, 255, 255);
   background-attachment: fixed;
   font-family: "Roboto", sans-serif;
   letter-spacing: 2px;
