--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@ body {
 
 	font-family: "Ubuntu", sans-serif;
 	color: #fff;
-	background-color: blueviolet;
+	background-color: rgb(255, 255, 255);
 	background-attachment: fixed;
 	font-family: "Roboto", sans-serif;
 	letter-spacing: 2px;
