--- a/scss/style.scss
+++ b/scss/style.scss
@@ -53,21 +53,21 @@ body {
 	padding-top: 100px;
 }
 .logo-container {
-	height: 100px;
-	width: 100px;
+	height: 150px;
+	width: 150px;
 }
 
 .logo-name-large {
 	text-shadow: 1px 1px 4px #fff;
-	font-size: 40px;
+	font-size: 60px;
 	opacity: 0;
 	animation: 2s title forwards;
 	animation-delay: 0.5s;
 }
 .logo-container-info {
 	position: relative;
-	height: 120px;
-	width: 120px;
+	height: 180px;
+	width: 180px;
 
 	img {
 		position: absolute;
@@ -85,7 +85,7 @@ body {
 }
 .welcome {
 	position: absolute;
-	top: 50px;
+	top: 80px;
 	left: 50%;
 	background-color: #8d915a;
 	text-transform: uppercase;
@@ -95,6 +95,30 @@ body {
 	animation-delay: 1s;
 	opacity: 0;
 	transform: translateX(-50%);
+}
+
+.chevron-down {
+	display: flex;
+	justify-content: center;
+	height: 20px;
+	position: sticky;
+	bottom: 20px;
+}
+
+.chevron-img-down {
+	animation: 0.8s chev-anim ease-in-out infinite alternate;
+   
+    filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.8));
+}
+@keyframes chev-anim {
+	from {
+		transform: translateY(40%);
+	}
+	to {
+		transform: translateY(-40%);
+	}
+
+
 }
 
 @keyframes logo-load {
