--- a/css/style.css
+++ b/css/style.css
@@ -104,16 +104,19 @@ body {
 }
 
 .chevron-down {
-  display: flex;
-  justify-content: center;
-  height: 20px;
   position: sticky;
-  bottom: 20px;
+  bottom: 30px;
 }
 
 .chevron-img-down {
+  height: 20px;
   animation: 0.8s chev-anim ease-in-out infinite alternate;
   filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.8));
+}
+
+.chevron-link {
+  display: flex;
+  justify-content: center;
 }
 
 @keyframes chev-anim {
