--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,11 +52,7 @@ body {
 	flex-direction: column;
 	padding-top: 100px;
 }
-.logo-container {
-	height: 150px;
-	width: 150px;
-}
-
+//
 .logo-name-large {
 	text-shadow: 1px 1px 4px #fff;
 	font-size: 60px;
@@ -97,9 +93,10 @@ body {
 	transform: translateX(-50%);
 }
 
-.chevron-down {
-	position: sticky;
-	bottom: 30px;
+.chevron-down {position: absolute;
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .chevron-img-down {
@@ -110,6 +107,7 @@ body {
 .chevron-link {
 	display: flex;
 	justify-content: center;
+    align-items: center;
 }
 @keyframes chev-anim {
 	from {
