--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .navbar {
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
   z-index: 10;
@@ -36,14 +36,26 @@ body {
 }
 
 .section-info {
+  position: relative;
   background-image: url(../img/salon.jpg);
+  width: 100%;
+  height: 100vh;
+  padding-top: 30px;
+}
+
+section {
   background-size: cover;
-  padding-top: 70px;
+}
+
+.mycard {
+  position: absolute;
+  top: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .card-info {
-  width: 100%;
-  height: calc(100vh - 70px);
   background: linear-gradient(45deg, #161616, #ffffff);
   opacity: 0.8;
 }
@@ -88,7 +100,7 @@ body {
   position: absolute;
   top: 80px;
   left: 50%;
-  background-color: #8d915a;
+  background-color: #642828;
   text-transform: uppercase;
   white-space: nowrap;
   padding: 0px 10px 0px 10px;
@@ -99,8 +111,8 @@ body {
 }
 
 .chevron-down {
-  position: absolute;
-  bottom: 80px;
+  position: fixed;
+  bottom: 70px;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -115,6 +127,53 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 80px;
+  height: 50px;
+}
+
+.offer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  padding-top: 40px;
+  background-color: #212529;
+}
+
+.card-offer {
+  background-color: #212529;
+}
+
+.card-body {
+  height: 140px;
+  text-align: center;
+  padding: 40px;
+}
+
+.carousel-h2 {
+  text-transform: uppercase;
+}
+
+.img-container {
+  position: relative;
+  width: 100vw;
+  height: 250px;
+  background-size: contain;
+  overflow: hidden;
+}
+
+.top20 {
+  position: absolute;
+  top: -20px;
+  left: 0;
+}
+
+.carousel-control-prev {
+  filter: drop-shadow(0px 0px 3px rgb(0, 0, 0));
+}
+
+.carousel-control-next {
+  filter: drop-shadow(0px 0px 3px rgb(0, 0, 0));
 }
 
 @keyframes chev-anim {
