--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,7 +18,7 @@ body {
 //navbar
 
 .navbar {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	width: 100%;
 	z-index: 10;
@@ -35,16 +35,29 @@ body {
 	letter-spacing: 5px;
 }
 .section-info {
+	position: relative;
 	background-image: url(../img/salon.jpg);
+	width: 100%;
+	height: 100vh;
+	padding-top: 30px;
+}
+
+section {
 	background-size: cover;
-	padding-top: 70px;
+}
+
+.mycard {
+	position: absolute;
+	top: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
 }
 .card-info {
-	width: 100%;
-	height: calc(100vh - 70px);
 	background: linear-gradient(45deg, #161616, #ffffff);
 	opacity: 0.8;
 }
+
 .phone-bar-correction {
 	display: flex;
 	justify-content: center;
@@ -83,7 +96,7 @@ body {
 	position: absolute;
 	top: 80px;
 	left: 50%;
-	background-color: #8d915a;
+	background-color: #642828;
 	text-transform: uppercase;
 	white-space: nowrap;
 	padding: 0px 10px 0px 10px;
@@ -93,10 +106,11 @@ body {
 	transform: translateX(-50%);
 }
 
-.chevron-down {position: absolute;
-    bottom: 80px;
-    left: 50%;
-    transform: translateX(-50%);
+.chevron-down {
+	position: fixed;
+	bottom: 70px;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
 .chevron-img-down {
@@ -107,8 +121,53 @@ body {
 .chevron-link {
 	display: flex;
 	justify-content: center;
-    align-items: center;
+	align-items: center;
+	width: 80px;
+	height: 50px;
 }
+
+// OFFER
+.offer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	padding-top: 40px;
+	background-color: #212529;
+}
+.card-offer {
+	background-color: #212529;
+}
+
+.card-body {
+	height: 140px;
+	text-align: center;
+	padding: 40px;
+}
+.carousel-h2 {
+	text-transform: uppercase;
+}
+.img-container {
+	position: relative;
+	width: 100vw;
+	height: 250px;
+	background-size: contain;
+	overflow: hidden;
+}
+.top20 {
+	position: absolute;
+	top: -20px;
+	left: 0;
+}
+
+.carousel-control-prev {
+	filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 1));
+}
+.carousel-control-next {
+	filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 1));
+}
+
+// animations
 @keyframes chev-anim {
 	from {
 		transform: translateY(40%);
