--- a/scss/style.scss
+++ b/scss/style.scss
@@ -105,12 +105,12 @@ body {
 	transform: translateX(-50%);
 }
 
-.chevron-down {
+.chevron-down {display: flex;
+    justify-content: center;
 	position: sticky;
 	bottom: 60px;
-	left: 50%;
-	transform: translateX(-50%);
-   
+
+ 
 }
 
 .chevron-img-down {
@@ -122,7 +122,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 80px;
+	width: 60px;
 	height: 50px;
 }
 
