--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,13 +9,15 @@ body {
     width: 100vw;
 	font-family: "Ubuntu", sans-serif;
 	color: #fff;
-	background-color: rgb(255, 255, 255);
+	background-color: #212529;
 	background-attachment: fixed;
 	font-family: "Roboto", sans-serif;
 	letter-spacing: 2px;
+    // overflow-y: scroll; 
     
 }
 //navbar
+nav{div{.active{font-weight: bold;}}}
 
 .navbar {
 	position: fixed;
