--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,7 +22,7 @@ nav{div{.active{font-weight: bold;}}}
 .navbar {
 	position: fixed;
 	top: 0;
-	width: 100%;
+	width: 100vw;
 	z-index: 10;
 }
 .logo_svg {
@@ -110,7 +110,7 @@ nav{div{.active{font-weight: bold;}}}
 .chevron-down {display: flex;
     justify-content: center;
 	position: sticky;
-	bottom: 20px;
+	bottom: 40px;
 
  
 }
