section about added, no descriptions/optional

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ nav div .active {
 
 .welcome {
   position: absolute;
+  display: inline-block;
   top: 80px;
   left: 50%;
   background-color: #642828;
@@ -175,6 +176,26 @@ nav div .active {
 
 .carousel-control-next {
   filter: drop-shadow(0px 0px 3px rgb(0, 0, 0));
+}
+
+.about-us {
+  position: relative;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-evenly;
+  align-self: center;
+  height: 100vh;
+  padding-top: 40px;
+  background-color: #212529;
+}
+
+.about-us-h2 {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.card-wraper {
+  background-color: #fff;
 }
 
 @keyframes chev-anim {
