--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,18 +6,23 @@
 
 body {
 	position: relative;
-    width: 100vw;
+	width: 100vw;
 	font-family: "Ubuntu", sans-serif;
 	color: #fff;
 	background-color: #212529;
 	background-attachment: fixed;
 	font-family: "Roboto", sans-serif;
 	letter-spacing: 2px;
-    // overflow-y: scroll; 
-    
+	// overflow-y: scroll;
 }
 //navbar
-nav{div{.active{font-weight: bold;}}}
+nav {
+	div {
+		.active {
+			font-weight: bold;
+		}
+	}
+}
 
 .navbar {
 	position: fixed;
@@ -42,10 +47,8 @@ nav{div{.active{font-weight: bold;}}}
 	width: 100%;
 	height: 100vh;
 	padding-top: 30px;
-    background-size: cover;
+	background-size: cover;
 }
-
-
 
 .mycard {
 	position: absolute;
@@ -95,6 +98,7 @@ nav{div{.active{font-weight: bold;}}}
 }
 .welcome {
 	position: absolute;
+	display: inline-block;
 	top: 80px;
 	left: 50%;
 	background-color: #642828;
@@ -107,12 +111,11 @@ nav{div{.active{font-weight: bold;}}}
 	transform: translateX(-50%);
 }
 
-.chevron-down {display: flex;
-    justify-content: center;
+.chevron-down {
+	display: flex;
+	justify-content: center;
 	position: sticky;
 	bottom: 40px;
-
- 
 }
 
 .chevron-img-down {
@@ -168,6 +171,28 @@ nav{div{.active{font-weight: bold;}}}
 .carousel-control-next {
 	filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 1));
 }
+
+//about-us
+
+.about-us {
+	position: relative;
+	display: flex;
+	flex-flow: column;
+	justify-content: space-evenly;
+	align-self: center;
+	height: 100vh;
+	padding-top: 40px;
+	background-color: #212529;
+
+
+	}
+
+
+.about-us-h2 {
+	text-align: center;
+	text-transform: uppercase;
+}
+.card-wraper{background-color: #fff;}
 
 // animations
 @keyframes chev-anim {
