body ovf y and vh for bootstrap scroll

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,7 @@ body {
 	background-attachment: fixed;
 	font-family: "Roboto", sans-serif;
 	letter-spacing: 2px;
-	overflow-y: scroll;
+	overflow-y: scroll; //smth dont work
 }
 //navbar
 nav {
