--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
   font-family: "Roboto", sans-serif;
   letter-spacing: 2px;
   overflow-y: scroll;
+  scrollbar-width: 0;
 }
 
 nav div .active {
