added min-width to prevent github from messiong resolution

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@ body {
 	font-family: "Roboto", sans-serif;
 	letter-spacing: 2px;
 	overflow-y: scroll; //smth dont work
-    scrollbar-width: 0;
+    min-width: 360px;
 }
 //navbar
 nav {
