--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   font-family: "Roboto", sans-serif;
   letter-spacing: 2px;
   overflow-y: scroll;
-  scrollbar-width: 0;
+  min-width: 360px;
 }
 
 nav div .active {
