--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,7 @@ body {
 	letter-spacing: 2px;
 	overflow-y: scroll; //smth dont work
     min-width: 360px;
+
 }
 //navbar
 nav {
@@ -29,7 +30,7 @@ nav {
 .navbar {
 	position: fixed;
 	top: 0;
-	width: 100%;
+	width: 100vw;
 	z-index: 10;
 }
 .logo_svg {
