--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,7 @@
 body {
 	position: relative;
 	width: 100vw;
-    height: 100vh;
+	height: 100vh;
 	font-family: "Ubuntu", sans-serif;
 	color: #fff;
 	background-color: #212529;
@@ -15,8 +15,7 @@ body {
 	font-family: "Roboto", sans-serif;
 	letter-spacing: 2px;
 	overflow-y: scroll; //smth dont work
-    min-width: 360px;
-
+	min-width: 320px;
 }
 //navbar
 nav {
@@ -32,16 +31,16 @@ nav {
 	top: 0;
 	width: 100vw;
 	z-index: 10;
-    min-width: 360px;
+	min-width: 320px;
 }
 .logo_svg {
-	height: 40px;
+	height: 35px;
 	padding-right: 10px;
 }
 .logo-name {
 	font-family: "Amatic SC", sans-serif;
 	font-weight: bold;
-	font-size: 30px;
+	font-size: 25px;
 	color: black;
 	letter-spacing: 5px;
 }
@@ -71,7 +70,7 @@ nav {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	padding-top: 100px;
+	padding-top: 20px;
 }
 //
 .logo-name-large {
@@ -83,8 +82,8 @@ nav {
 }
 .logo-container-info {
 	position: relative;
-	height: 180px;
-	width: 180px;
+	height: 150px;
+	width: 150px;
 
 	img {
 		position: absolute;
@@ -102,17 +101,21 @@ nav {
 }
 .welcome {
 	position: absolute;
-	display: inline-block;
-	top: 80px;
+	top: 40px;
 	left: 50%;
-	background-color: #642828;
-	text-transform: uppercase;
-	white-space: nowrap;
-	padding: 0px 10px 0px 10px;
+    text-align: center;
+
 	animation: 2.5s welcoming forwards;
 	animation-delay: 1s;
 	opacity: 0;
 	transform: translateX(-50%);
+	p {
+		display: inline-block;
+        padding: 0px 10px 0px 10px;
+		background-color: #642828;
+		text-transform: uppercase;
+		white-space: nowrap;
+	}
 }
 
 .chevron-down {
@@ -187,16 +190,15 @@ nav {
 	height: 100vh;
 	padding-top: 40px;
 	background-color: #212529;
-
-
-	}
-
+}
 
 .about-us-h2 {
 	text-align: center;
 	text-transform: uppercase;
 }
-.card-wraper{background-color: #fff;}
+.card-wraper {
+	background-color: #fff;
+}
 
 // animations
 @keyframes chev-anim {
