--- a/scss/style.scss
+++ b/scss/style.scss
@@ -122,13 +122,14 @@ nav {
 	display: flex;
 	justify-content: center;
 	position: sticky;
-	bottom: 40px;
+	bottom: 15px;
 }
 
 .chevron-img-down {
 	height: 20px;
 	animation: 0.8s chev-anim ease-in-out infinite alternate;
 	filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.8));
+	opacity: 0.8;
 }
 .chevron-link {
 	display: flex;
@@ -152,19 +153,41 @@ nav {
 }
 
 .card-body {
-	height: 140px;
+	height: 120px;
 	text-align: center;
-	padding: 40px;
+	padding: 15px 40px 0 40px;
+   
 }
 .carousel-h2 {
 	text-transform: uppercase;
+    
 }
 .img-container {
 	position: relative;
 	width: 100vw;
-	height: 250px;
-	background-size: contain;
+	height: 220px;
+	background-size: cover;
+	background-position: center;
 	overflow: hidden;
+	background-color: #642828;
+}
+.img-1 {
+	background-image: url(../img/cutting-8096167_1280.jpg);
+}
+.img-2 {
+	background-image: url(../img/hair-1744959_1280.jpg);
+}
+.img-3 {
+	background-image: url(../img/bride-4634446_1280.jpg);
+}
+.img-4 {
+	background-image: url(../img/hairdressing-1516352_1280.jpg);
+}
+.img-5 {
+	background-image: url(../img/fashion-8254063_1280.jpg);
+}
+.img-6 {
+	background-image: url(../img/close-up-image-female-hairdresser-washing-bearded-men-s-hair-before-haircut-saloon.jpg);
 }
 .top20 {
 	position: absolute;
@@ -190,12 +213,13 @@ nav {
 	height: 100vh;
 	padding-top: 40px;
 	background-color: #212529;
+	.card-body {padding-top: 10px;
+        background-color: #642828;
+		height: 140px;
+       
+	}
 }
 
-.about-us-h2 {
-	text-align: center;
-	text-transform: uppercase;
-}
 .card-wraper {
 	background-color: #fff;
 }
