--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,7 +61,7 @@ nav {
 	height: 100%;
 }
 .card-info {
-	background: linear-gradient(45deg, #161616, #ffffff);
+	background: linear-gradient(45deg, #161616, rgb(126, 126, 126));
 	opacity: 0.8;
 }
 
@@ -74,7 +74,7 @@ nav {
 }
 //
 .logo-name-large {
-	text-shadow: 1px 1px 4px #fff;
+	text-shadow: 0px 0px 4px rgb(255, 255, 255);
 	font-size: 60px;
 	opacity: 0;
 	animation: 2s title forwards;
@@ -111,10 +111,13 @@ nav {
 	transform: translateX(-50%);
 	p {
 		display: inline-block;
+		width: 180px;
 		padding: 0px 10px 0px 10px;
-		background-color: #642828;
+		background-color: rgb(219, 219, 219);
 		text-transform: uppercase;
 		white-space: nowrap;
+		border-radius: 4px;
+		color: rgb(19, 19, 19);
 	}
 }
 
@@ -156,11 +159,9 @@ nav {
 	height: 120px;
 	text-align: center;
 	padding: 15px 40px 0 40px;
-   
 }
 .carousel-h2 {
 	text-transform: uppercase;
-    
 }
 .img-container {
 	position: relative;
@@ -213,15 +214,62 @@ nav {
 	height: 100vh;
 	padding-top: 40px;
 	background-color: #212529;
-	.card-body {padding-top: 10px;
-        background-color: #642828;
+	.card-body {
+		padding-top: 10px;
+		background-color: #642828;
 		height: 140px;
-       
 	}
 }
 
 .card-wraper {
 	background-color: #fff;
+}
+
+//contact
+
+.contact {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	height: 100vh;
+	line-height: 1.8em;
+	.invite {
+		margin-top: 20px;
+		text-align: center;
+	}
+	.line {
+		height: 2px;
+		width: 80vw;
+		align-self: center;
+		margin: 25px 0 25px 0;
+		box-shadow: 0px 0px 4px #fff;
+		background-color: #ffffff;
+	}
+	ul {
+		list-style: none;
+	}
+	i {
+		margin-right: 5px;
+		font-size: 20px;
+	}
+
+	.fa-square-phone-flip {
+		color: rgb(68, 192, 99);
+	}
+	.fa-square-facebook {
+		position: relative;
+		color: rgb(44, 121, 236);
+	}
+	.white {
+		position: absolute;
+		background-color: #fff;
+        width: 80%;height: 80%;
+		z-index: -1;
+        bottom: 2px;
+        left: 1px;
+		
+	}
+    a{text-decoration: none;color: #fff;}
 }
 
 // animations
